--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <ul>
 <li>
-<a href="http://ericvan76.github.io/KidsPrizeMobile">KidsPrize</a> - a simple behaviour charts for kids</li>
+<a href="https://github.com/ericvan76/KidsPrizeMobile">KidsPrize</a> - a simple behaviour charts for kids</li>
 <li>
 <a href="http://goo.gl/Rcjs82">Right Click Translate</a> - a chrome extension to translate selected text</li>
 <li>
