--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 <li>
 <a href="https://github.com/ericvan76/KidsPrizeMobile">KidsPrize</a> - a simple behaviour charts for kids</li>
 <li>
-<a href="http://goo.gl/Rcjs82">Right Click Translate</a> - a chrome extension to translate selected text</li>
+<a href="https://github.com/ericvan76/right-click-translate">Right Click Translate</a> - a chrome extension to translate selected text</li>
 <li>
-<a href="http://ericvan76.github.io/babylonjs-play">Drop balls</a> - babylonjs playground</li>
+<a href="https://github.com/ericvan76/babylonjs-play">Drop balls</a> - babylonjs playground</li>
 </ul>
       </section>
     </div>
